[gd_scene load_steps=3 format=3 uid="uid://bxsuo25o46jh8"]

[ext_resource type="Script" uid="uid://bnar6bbu7g4dw" path="res://blisscode/ui/menus/menu/controls_menu/input_listener_overlay.gd" id="1_input_listener"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="InputListenerOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_input_listener")

[node name="OverlayPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -74.0
offset_right = 145.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="OverlayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="InstructionLabel" type="Label" parent="OverlayPanel/VBoxContainer"]
layout_mode = 2
text = "Press any key, mouse button, or gamepad input..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentBindingLabel" type="Label" parent="OverlayPanel/VBoxContainer"]
layout_mode = 2
text = "No current binding"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="OverlayPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="OverlayPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CancelButton" type="Button" parent="OverlayPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="ClearButton" type="Button" parent="OverlayPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"
